# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2010-11-26  Christian Heller  <christian.heller@tuxtax.de>
        * Factor out http request selecting functions to separate files

2010-11-25  Christian Heller  <christian.heller@tuxtax.de>
        * Change back all-at-once-conversion of http request header into wide characters,
            because the URI may contain percent-encoded octets that first have to be decoded,
            before decoding the therefrom resulting octets into wide characters
        * Factor out http request processing functions to separate files
        * Prepare decoding of percent-encoded character arrays (may be applied in a URI)

2010-11-24  Christian Heller  <christian.heller@tuxtax.de>
        * Start implementing URI decoding using files independent of HTTP, to make it reusable

2010-11-23  Christian Heller  <christian.heller@tuxtax.de>
        * Change http decoding so that the message header and -body are
            separated first, while still available as ASCII characters
        * Convert http message header into wide characters at once (not piece by piece)
        * Replace constants files "*compound_http_name.c" with "cyboi_http_name.c"
        * Change type of most http constants towards wide character, since the http
            message header is converted to wide characters, before processing it further

2010-11-17  Christian Heller  <christian.heller@tuxtax.de>
        * Set model count to zero in "model_allocator.c", since the model does initially not contain any elements;
            correct bug in "character_vector_addition_calculator.c" and "integer_vector_addition_calculator.c",